--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1021,5 +1021,6 @@
     <string name="vk_profile_invite_friends_title">Пригласить друзей</string>
     <string name="invite_friend_button">Пригласить</string>
     <string name="invitation_sended_button">Отправлено</string>
+    <string name="invitation_sended_button">Список ваших друзей пуст</string>
 
 </resources>
