--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1022,5 +1022,6 @@
     <string name="invite_friend_button">Пригласить</string>
     <string name="invitation_sended_button">Отправлено</string>
     <string name="friends_empty_list_error">Список ваших друзей пуст</string>
-
+    <string name="join_group_success">Вы вступили в группу</string>
+    
 </resources>
