--- a/src/google/res/values-it/strings.xml
+++ b/src/google/res/values-it/strings.xml
@@ -22,6 +22,7 @@
     <string name="waiting_a_products">Attendere, prego. Caricamento prodotti da acquistare</string>
     <string name="likes_background_text">Non hai simpatie</string>
     <string name="visitors_background_text">Non ci sono le visite</string>
+    <string name="need_set_avatar">Non puoi fare conoscenze! Imposta l\'immagine del profilo.</string>
     <string name="chat_background_text">Non ci sono i messaggi in entrata</string>
     <string name="entrance">Entrata</string>
     <string name="filter_only_online">Solo online</string>
@@ -837,4 +838,6 @@
     <string name="novice_sympathies_bonus">Riceverai %1$d simpatie in\nregalo! Significa che\ndi
         sicuro piacerai a %2$d persone\nche ti dimostreranno la loro simpatia
     </string>
+    <string name="go_dating_message">Comincia a fare conoscenze e in questa sezione vedrai gli utenti che hanno visitato il tuo profilo</string>
+    <string name="vk_profile_button_invite_friends">Invita amici</string>
 </resources>
